--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.3.1
+  markdown_widget: ^2.3.2+6
+  url_launcher: ^6.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
