--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   markdown_widget: ^2.3.2+6
   url_launcher: ^6.3.0
   window_manager: ^0.3.8
+  scrollable_positioned_list: ^0.3.8
 
 
 
