--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   url_launcher: ^6.3.0
   window_manager: ^0.3.8
   scrollable_positioned_list: ^0.3.8
-
-
+  shared_preferences: ^2.2.3
+  markdown:
+  flutter_math_fork:
+  flutter_highlight:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
