--- a/frontend/macos/Runner/Configs/AppInfo.xcconfig
+++ b/frontend/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = frontend
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.frontend
+PRODUCT_BUNDLE_IDENTIFIER = com.memento.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
