--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider:
   share_plus: ^9.0.0
   file_selector: ^1.0.3
+  image: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
