--- a/frontend/web/manifest.json
+++ b/frontend/web/manifest.json
@@ -20,13 +20,13 @@
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/icon-192-maskable",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/icon-512-maskable",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
