--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   share_plus: ^9.0.0
   file_selector: ^1.0.3
   image: ^4.2.0
+  flutter_web_plugins:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
