--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.2+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -44,13 +44,16 @@ dependencies:
   path_provider:
   share_plus: ^9.0.0
   file_selector: ^1.0.3
-  image: ^4.2.0
   flutter_web_plugins:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+
+dependency_overrides:
+  highlight:
+    path: ./pkgs/highlight
 
 dev_dependencies:
   flutter_test:
@@ -107,3 +110,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  deferred-components:
