--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,11 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
-      - run: python3 build.py
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '>=1.21'
+      - run: cd ${{github.action_path}} && python3 build.py
       - uses: actions/upload-artifact@v4
         with:
           name: build
+          path: ${{github.action_path}}/build
