--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.21'
-      - run: cd ${{github.action_path}} && python3 build.py
+      - run: cd ${{ github.workspace }} && python3 build.py
       - uses: actions/upload-artifact@v4
         with:
           name: build
-          path: ${{github.action_path}}/build
+          path: ${{ github.workspace }}/build
