--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_highlight:
   dio:
   path_provider:
-  share_plus: ^9.0.0
+  share_plus: ^10.0.2
   file_picker: ^8.0.6
   flutter_web_plugins:
     sdk: flutter
@@ -51,6 +51,9 @@ dependencies:
       url: https://github.com/wgh136/photo_view
       ref: ee7e3628
   universal_html:
+  web_native_text:
+    git:
+      url: https://github.com/wgh136/web_native_text
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
