--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
