--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
