--- a/web/package.json
+++ b/web/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
+    "highlight.js": "^11.10.0",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router": "^7.0.1"
+    "react-markdown": "^9.0.1",
+    "react-router": "^7.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
